php/bbs/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bbsphp
  namespace: bbs
  labels:
    app: bbsphp
spec:
  ports:
  - port: 9009
    targetPort: 80
    name: http
  clusterIP: None
  selector:
    app: bbsphp
